syntax = "proto3";
option java_multiple_files = true;
package io.shashank.grpc.service.echo;

message EchoRequest{
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService{
  rpc echo(EchoRequest) returns (EchoResponse);
  rpc serverStreamingEcho(EchoRequest) returns (stream EchoResponse);
  rpc clientStreamingEcho(stream EchoRequest) returns (EchoResponse);
  rpc bidirectionalEcho(stream EchoRequest) returns (stream EchoResponse);
  rpc cancellableEcho(EchoRequest) returns (EchoResponse);
}

